@@ -25,6 +25,8 @@ BUGFIXES:
   ZOOKEEPER-333. helgrind thread issues identified in mt c client code
   (mahadev via phunt)
 
+  ZOOKEEPER-309. core dump using zoo_get_acl() (mahadev via phunt)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-279. Allow specialization of quorum config parsing
